fix: исправлены критические баги и совместимость с Java 8
## Критические исправления

### SURanksManager.java
- ИСПРАВЛЕНО: JsonObject.getAsString() заменён на toString()
  Старый код вызывал UnsupportedOperationException, т.к. getAsString()
  работает только с примитивами, а не с JsonObject

- ИСПРАВЛЕНО: java.net.http.HttpClient (Java 11+) заменён на HttpURLConnection
  Оригинальный код использовал API Java 11+, который недоступен при
  компиляции под Java 8 (Minecraft 1.7.10). Jabel поддерживает только
  синтаксис современной Java, но не стандартную библиотеку

- ИСПРАВЛЕНО: Set.of() и List.of() (Java 9+) заменены на Java 8 эквиваленты
  - Set.of() -> Collections.unmodifiableSet(new HashSet<>(Arrays.asList()))
  - List.of() -> Arrays.asList()

- ДОБАВЛЕНО: проверка API_URL на null перед использованием
  Если переменная окружения не установлена, теперь выводится предупреждение
  вместо NullPointerException

- УЛУЧШЕНО: System.out.println() заменён на логгер (log4j)
  Добавлен Logger для корректного логирования

- УЛУЧШЕНО: isEpoch() теперь использует Set.contains() вместо switch
  с хардкодированными строками, используя константы RANK_*

- УДАЛЕНО: закомментированный мёртвый код и устаревшие комментарии

### CommandSync.java
- ИСПРАВЛЕНО: добавлен return после вывода ошибки валидации
  Без return выполнение продолжалось, что приводило к
  ArrayIndexOutOfBoundsException или NumberInvalidException

### BQEventListener.java
- УЛУЧШЕНО: System.out.println() заменён на log.debug()
- УДАЛЕНО: закомментированный код отладки

### CommonProxy.java
- ИСПРАВЛЕНО: шаблонное сообщение "I am MyMod" заменено на корректное